// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`codes reducer should GET_LANGUAGE_CODES_FULFILLED 1`] = `
Object {
  "errorMessage": "",
  "isError": false,
  "isPending": false,
  "languageCodeCount": 10,
  "languageCodeList": Object {},
}
`;

exports[`codes reducer should GET_LANGUAGE_CODES_PENDING 1`] = `
Object {
  "errorMessage": "",
  "isError": false,
  "isPending": true,
  "languageCodeCount": 0,
  "languageCodeList": Array [],
}
`;

exports[`codes reducer should GET_LANGUAGE_CODES_REJECTED 1`] = `
Object {
  "errorMessage": "ErrorMessage",
  "isError": true,
  "isPending": false,
  "languageCodeCount": 0,
  "languageCodeList": Array [],
}
`;

exports[`codes reducer should return the initial state 1`] = `
Object {
  "errorMessage": "",
  "isError": false,
  "isPending": false,
  "languageCodeCount": 0,
  "languageCodeList": Array [],
}
`;
